--- a/app.json
+++ b/app.json
@@ -1,11 +1,19 @@
 {
   "expo": {
-    "name": "examin",
-    "slug": "examin",
+    "name": "Examin",
+    "slug": "Examin",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "orientation": "portrait",
+    "icon": "./src/assets/icon.png",
+    "splash": {
+      "image": "./src/assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#AF804D"
+    },
+    "assetBundlePatterns": ["**/*"],
+    "android": {
+      "package": "com.pabloneres.examin"
+    }
   },
   "name": "examin"
 }
