--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/space-grotesk": "^0.2.2",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.2",
+    "expo-app-loading": "~1.3.0",
+    "expo-constants": "~13.0.1",
+    "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-masked-text": "^1.13.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "0.17.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "babel-plugin-root-import": "^6.6.0"
   },
   "private": true
 }
